--- a/test_frontend_api.html
+++ b/test_frontend_api.html
@@ -12,7 +12,7 @@
         
         async function testAPI() {
             // Get the backend URL from environment
-            const backendUrl = 'https://fix-render-loop.preview.emergentagent.com';
+            const backendUrl = 'https://job-portal-admin.preview.emergentagent.com';
             const apiUrl = `${backendUrl}/api/auth/login`;
             
             results.innerHTML += `<p><strong>Testing URL:</strong> ${apiUrl}</p>`;
