--- a/debug_login.html
+++ b/debug_login.html
@@ -14,7 +14,7 @@
             results.innerHTML = '<p>Testing...</p>';
             
             try {
-                const backendUrl = 'https://fix-render-loop.preview.emergentagent.com';
+                const backendUrl = 'https://job-portal-admin.preview.emergentagent.com';
                 const apiUrl = `${backendUrl}/api/auth/login`;
                 
                 console.log('Making request to:', apiUrl);
